<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ExerciseActivity"
    tools:showIn="@layout/activity_exercise">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_encabezado"
            android:gravity="center"
            android:textColorHighlight="@color/exercise_color_encabezado"
            android:textSize="17dp"
            android:id="@+id/textView4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_fichero"
            android:onClick="subirFichero"
            android:id="@+id/exercise_button2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_foto"
            android:onClick="sacarFoto"
            android:id="@+id/exercise_button3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_audio"
            android:onClick="recordAudio"
            android:id="@+id/exercise_button4" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exercise_video"
            android:onClick="recordVideo"
            android:id="@+id/exercise_button5" />
    </LinearLayout>
</RelativeLayout>
