<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login De Usuario"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/menu_login_color"
            android:id="@+id/textView" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">


            <TextView
                android:id="@+id/tLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_usuario" />

            <EditText
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/menu_usuario_contenido" />

            <TextView
                android:id="@+id/tPasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_password" />

            <EditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/menu_password_contenido"
                android:inputType="textPassword" />

        </GridLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_boton_acceder"
            android:onClick="login"/>

</LinearLayout>



</RelativeLayout>
